--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -49,24 +49,15 @@
         <activity android:name=".Welcome" android:label="@string/app_name" android:screenOrientation="portrait"/>
   		<activity android:name=".JoinNative" android:label="@string/app_name" android:screenOrientation="portrait"/>
   		<activity android:name=".ConnectToFacebook" android:label="@string/app_name" android:screenOrientation="portrait"/>
- 		<activity android:name=".MainLanding" android:label="@string/app_name" android:screenOrientation="portrait" />
- 		<activity android:name=".PreviousOpponents" android:label="@string/app_name" android:screenOrientation="portrait" />
+ 		<activity android:name=".Main" android:label="@string/app_name" android:screenOrientation="portrait" />
 		<activity android:name=".QuickRules" android:label="@string/app_name" android:screenOrientation="portrait"/>
 		<activity android:name=".AccountSettings" android:label="@string/app_name" android:screenOrientation="portrait"/>
 		<activity android:name=".Settings" android:label="@string/app_name" android:screenOrientation="portrait"/>
-		<activity android:name=".TestLanding" android:label="@string/app_name" />
-		<activity android:name=".GamePlay" android:label="@string/app_name" />
 		<activity android:name=".GameSurface" android:label="@string/app_name" android:screenOrientation="portrait"/>
-		<activity android:name=".FindPlayer" android:label="@string/app_name" android:screenOrientation="portrait"/>
-		<activity android:name=".FindPlayerResults" android:label="@string/app_name" android:screenOrientation="portrait"/>
-		<activity android:name=".StartGame" android:label="@string/app_name" android:screenOrientation="portrait"/>
 		<activity android:name=".Options" android:label="@string/app_name" android:screenOrientation="portrait"/>
 		<activity android:name=".Gravatar" android:label="@string/app_name" android:screenOrientation="portrait"/>
 		<activity android:name=".GravatarRefresh" android:label="@string/app_name" android:screenOrientation="portrait"/>
-		<activity android:name=".AddOpponents" android:label="@string/app_name" android:screenOrientation="portrait"/>
-		<activity android:name=".ChooseFBFriends" android:label="@string/app_name" android:screenOrientation="portrait"/>
 		<activity android:name=".FBAccountSettings" android:label="@string/app_name" android:screenOrientation="portrait"/>
-		<activity android:name=".GameChat" android:label="@string/app_name" android:screenOrientation="portrait"  />
 	 	<activity android:name=".GameHistory" android:label="@string/app_name" android:screenOrientation="portrait"/>
 	 	<activity android:name=".GameLookup" android:label="@string/app_name" android:screenOrientation="portrait"/>
 	 	<activity android:name=".About" android:label="@string/app_name" android:screenOrientation="portrait"/>
