--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,6 +61,7 @@
 	 	<activity android:name=".GameHistory" android:label="@string/app_name" android:screenOrientation="portrait"/>
 	 	<activity android:name=".GameLookup" android:label="@string/app_name" android:screenOrientation="portrait"/>
 	 	<activity android:name=".About" android:label="@string/app_name" android:screenOrientation="portrait"/>
+	 	<activity android:name=".Store" android:label="@string/app_name" android:screenOrientation="portrait"/>
 	 	<activity android:name=".InterstitialAd" android:label="@string/app_name" android:screenOrientation="portrait"/>
 	 	
 	 	<activity android:name="com.facebook.LoginActivity" android:label="@string/app_name" android:screenOrientation="portrait"/>
