--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,7 @@
 	    <service android:enabled="true" android:name="com.riotapps.word.services.BackgroundService"  android:process=":bkgdSvc"/>
         <service android:enabled="true" android:name="com.riotapps.word.services.WordLoaderService" />  
         
-       <activity android:name=".Splash" android:label="@string/app_name" android:screenOrientation="portrait">
+       <activity android:name=".Splash" android:label="@string/app_name" android:noHistory="true" android:screenOrientation="portrait">
  		    <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
