--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <!-- Google cloud messaging required version 8 or above. -->
-    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="13" />
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="14" />
  
     
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -14,7 +14,7 @@
 	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
  
     <application  
-         
+        android:allowBackup="true"  
         android:name="com.riotapps.word.utils.ApplicationContext" 
         android:icon="@drawable/icon_launcher"
         android:label="@string/app_name"  
@@ -50,15 +50,14 @@
   		<activity android:name=".CompletedGames" android:label="@string/app_name" android:screenOrientation="portrait"/>
  		<activity android:name=".Main" android:label="@string/app_name" android:screenOrientation="portrait" />
 		<activity android:name=".GameSurface" android:label="@string/app_name" android:screenOrientation="portrait"/>
-		<activity android:name=".Options" android:label="@string/app_name" android:screenOrientation="portrait"/>
-	 	<activity android:name=".GameHistory" android:label="@string/app_name" android:screenOrientation="portrait"/>
+ 	 	<activity android:name=".GameHistory" android:label="@string/app_name" android:screenOrientation="portrait"/>
 	 	<activity android:name=".GameLookup" android:label="@string/app_name" android:screenOrientation="portrait"/>
 	 	<activity android:name=".About" android:label="@string/app_name" android:screenOrientation="portrait"/>
 	 	<activity android:name=".Store" android:label="@string/app_name" android:screenOrientation="portrait"/>
 	 	<activity android:name=".InterstitialAd" android:label="@string/app_name" android:screenOrientation="portrait"/>
+	 	<activity android:name=".HopperPeek" android:label="@string/app_name" android:screenOrientation="portrait"/>
 	 	
-	 	<activity android:name="com.facebook.LoginActivity" android:label="@string/app_name" android:screenOrientation="portrait"/>
-	 	 <activity android:name="com.chartboost.sdk.CBImpressionActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:excludeFromRecents="true" />
+ 	 	 <activity android:name="com.chartboost.sdk.CBImpressionActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:excludeFromRecents="true" />
 	 	 <activity android:name="com.google.ads.AdActivity"
               android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
 	 	<meta-data android:value="@string/app_id" android:name="com.facebook.sdk.ApplicationId"/>
