--- a/project.properties
+++ b/project.properties
@@ -8,8 +8,7 @@
 # project structure.
 #
 # To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, user.home):
-proguard.config=${sdk.dir}\tools\proguard\proguard-android.txt:proguard-project.txt
+proguard.config=${sdk.dir}\\tools\\proguard\\proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-13
-android.library.reference.1=../../../../Downloads/facebook-android-sdk-3.0/facebook-android-sdk-3.0/facebook
+target=Google Inc.:Google APIs:14
