--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,13 +12,17 @@
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+	<uses-permission android:name="com.android.vending.BILLING" />
+	<uses-permission android:name="com.android.vending.CHECK_LICENSE" />
  
     <application  
         android:allowBackup="true"  
         android:name="com.riotapps.word.utils.ApplicationContext" 
         android:icon="@drawable/icon_launcher"
         android:label="@string/app_name"  
-        android:theme="@style/MainStyle" >
+        android:theme="@style/MainStyle" 
+        android:versionCode="1"
+        android:versionName="ApplePie" >
  
 
 	    <service android:enabled="true" android:name="com.riotapps.word.services.ProcessBridge"  />
