--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 	<uses-permission android:name="com.android.vending.BILLING" />
-	<uses-permission android:name="com.android.vending.CHECK_LICENSE" />
+	<!--  <uses-permission android:name="com.android.vending.CHECK_LICENSE" />  -->
  
     <application  
         android:allowBackup="true"  
