--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+<!--  	<uses-permission android:name="android.permission.READ_PHONE_STATE"/> -->
 	<uses-permission android:name="com.android.vending.BILLING" />
 	<!--  <uses-permission android:name="com.android.vending.CHECK_LICENSE" />  -->
  
